swagger issue fix
